# ulam_spiral

./: Micrograd from scratch.ipynb  README.md  Visualize primes.ipynb  pyproject.toml  viz.py
.ipynb_checkpoints/: Micrograd from scratch-checkpoint.ipynb
notebooks/: Visualize primes.ipynb
src/primes/: __init__.py  goodness.py  primes.py  ulam_spiral.py  viz.py
src/primes.egg-info/: PKG-INFO  SOURCES.txt
