[project]
name = "primes"
version = "0.1.0"
description = "Prime number exploration tools, Ulam spiral generator, visualization and diagonal goodness metrics."
readme = "README.md"
requires-python = ">=3.9"

authors = [
    { name = "Peter Rona", email = "rona.peter@gmail.com" }
]

license = { text = "MIT" }

# ---- dependencies ----
dependencies = [
    "numpy",
    "matplotlib",
    "ipywidgets",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
